<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="iamnp.musicguide.SingerListActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/singer_list"
        android:name="iamnp.musicguide.SingerListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layoutManager="LinearLayoutManager"
        tools:context="iamnp.musicguide.SingerListActivity"
        tools:listitem="@layout/singer_list_content" />

</android.support.v4.widget.SwipeRefreshLayout>